--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "handle-cookie",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "Parse string to cookie object",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
@@ -9,12 +9,11 @@
     "license": "MIT",
     "private": false,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo \"Error: no test specified $npm_package_version\" && exit 1",
         "prepare": "tsc",
-        "preversion": "yarn lint",
-        "version": "yarn format && git add -A src",
-        "postversion": "git push && git push --tags",
-        "git": "git add -A && git commit -m \"Setup Package\" && git push"
+        "git": "git add -A && git commit -m \"Update version: %npm_package_version%\" && git push",
+        "push": "yarn publish",
+        "v": "yarn version --patch"
     },
     "homepage": "https://github.com/nqnghia285/handle-cookie.git#readme",
     "keywords": [
@@ -28,5 +27,8 @@
     "dependencies": {
         "@types/cookie": "^0.4.0",
         "cookie": "^0.4.1"
+    },
+    "devDependencies": {
+        "cross-conf-env": "^1.2.1"
     }
 }
